Refactored tests to use samples